Fix ui spacing and empty checks on group/event pages

--- a/app/Resources/themes/ideacontest/SpoutletBundle/public/css/containers.css
+++ b/app/Resources/themes/ideacontest/SpoutletBundle/public/css/containers.css
@@ -234,16 +234,10 @@
 			height: 125px;
 			margin: 10px 0 10px 10px;
 		}
-    .scrollableSidebarWidget {
-       padding-left:5px;
+    .scrollableWidget {
        max-height: 250px;
        overflow-y: auto
    }
-    .scrollableSidebarWidgetItem {
-       padding: 5px 0px 5px 0px;
-       border-bottom: 1px dashed #ccc;
-   }
-
 
 /*********** SUBPAGE CONTAINERs ***********/
 		
